@@ -22,7 +22,7 @@
 		<org.springframework.version>3.0.5.RELEASE</org.springframework.version>
 		<guiceVersion>3.0-rc2</guiceVersion>
 		<xstream.version>1.3.1</xstream.version>
-		<schema-to-pojo.version>0.1.21</schema-to-pojo.version>
+		<schema-to-pojo.version>0.2.0</schema-to-pojo.version>
 		<org.json.version>20090211</org.json.version>
 		<jackson.version>1.8.1</jackson.version>
 	</properties>
@@ -179,6 +179,12 @@
 					<!-- Run the GWT test with the headless html unit. -->
 					<mode>htmlunit</mode>
 					<module>org.sagebionetworks.web.Portal</module>
+					<!-- GWT compiler options -->
+			        <compileReport>true</compileReport>
+			        <encoding>${project.build.sourceEncoding}</encoding>
+			        <logLevel>INFO</logLevel>
+			        <extraJvmArgs>-Xmx896M -Xms896m -XX:PermSize=64m -XX:MaxPermSize=128m</extraJvmArgs>
+					<!--           <fragmentCount>12</fragmentCount> -->					
 				</configuration>
 			</plugin>
 
